--- a/index.html
+++ b/index.html
@@ -17,22 +17,24 @@
     <div>
       <header>
         <nav class="navigation">
-          <a>Gezinizi Planlayın</a>
-          <a>Bilgi edinin</a>
-          <a>Karşılaştırın</a>
+          <a style="background-color: #ff764e;">Gezinizi Planlayın</a>
+          <a style="background-color: #5ED3EB;">Bilgi edinin</a>
+          <a style="background-color: #FFCD69;">Karşılaştırın</a>
         </nav>
       </header>
 
       <div>
         <div class="banner">
-          <img src="assets/header_img.jpg" alt="logo"/>
-          
+          <img class="id" src="assets/header_img.jpg" alt="logo"/>
+          <div style="margin: 2rem; text-align: center;">
           <h1>Peri Bacaları Tanıtımı</h1>
-          <p>
-            Gelin ve Nevşehir'in gizli güzelliklerini keşfedin. Sürekli açık.
-            Ziyaret için rezervasyona gerek yoktur.
+          <p style="width: 50rem;">
+            Gelin ve Nevşehir'in gizli güzelliklerini keşfedin.
+            </p>
+            <p> Sürekli açık.
+            Ziyaret için rezervasyona gerek yoktur.</p>
           </p>
-        
+        </div>
         </div>
       </div>
       <div class="explan">
@@ -80,9 +82,9 @@
     <footer class=>
       <img src="assets/footer_img.jpg" />
       <nav class="navigation">
-        <a>Gezinizi Planlayın</a>
-        <a> Bilgi edinin</a>
-        <a>Karşılaştırın</a>
+        <a style="background-color: #ff764e;">Gezinizi Planlayın</a>
+        <a style="background-color: #5ED3EB;"> Bilgi edinin</a>
+        <a style="background-color: #FFCD69;">Karşılaştırın</a>
       </nav>
     </footer>
   </body>
