--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
       </div>
     </div>
-    <footer class=>
+    <footer>
       <img src="assets/footer_img.jpg" />
       <nav class="navigation">
         <a style="background-color: #ff764e;">Gezinizi Planlayın</a>
